--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
   </head>
   <body>
-    <svg id="svgBackground" class=""></svg>
+    <div class="foto">
+      <svg id="svgBackground" class=""></svg>
+    </div>
     <script src="./src/js/svgBackground.js" type="module"></script>
   </body>
 </html>
