--- a/index.html
+++ b/index.html
@@ -7,9 +7,28 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="foto">
-      <svg id="svgBackground" class=""></svg>
-    </div>
+    <nav class="nav">
+      <ul>
+        <li>🟢</li>
+        <li>🟢</li>
+        <li>🟢</li>
+        <li>🟢</li>
+      </ul>
+    </nav>
+    <section>
+      <div class="foto">
+        <svg id="svgBackground" class=""></svg>
+      </div>
+      <div class="my-skills">
+        <div class="my-skills__content">
+          <span class="content one"></span>
+          <span class="content two"></span>
+        </div>
+      </div>
+    </section>
+
+    <section>2</section>
     <script src="./src/js/svgBackground.js" type="module"></script>
+    <script src="./src/js/mySkills.js" type="module"></script>
   </body>
 </html>
