--- a/index.html
+++ b/index.html
@@ -16,6 +16,45 @@
     <section id="section0">
       <span class="line"></span>
       <div class="foto">
+        <div class="perform">
+          <div class="contacts">
+            <h1>Kzhemiakin Sergei</h1>
+            <a href="https://t.me/+79939231608">
+              <svg class="icons">
+                <use xlink:href="./src/icons/icons.svg#telegramIcon"></use>
+              </svg>
+              <p>+ 7 993 923 16 08</p>
+            </a>
+
+            <a href="https://api.whatsapp.com/send?phone=79939231608">
+              <svg class="icons">
+                <use xlink:href="./src/icons/icons.svg#whatsappIcon"></use>
+              </svg>
+              <p>+ 7 993 923 16 08</p>
+            </a>
+            <a href="tel:+35795541637">
+              <svg class="icons">
+                <use xlink:href="./src/icons/icons.svg#phoneIcon"></use>
+              </svg>
+              <p>+ 357 95 541 637</p>
+            </a>
+            <a href="mailto:1351618@gmail.com">
+              <svg class="icons">
+                <use xlink:href="./src/icons/icons.svg#emailIcon"></use>
+              </svg>
+              <p>1351618@gmail.com</p>
+            </a>
+          </div>
+          <div class="dopInfo">
+            <div>
+              <svg class="icons">
+                <use xlink:href="./src/icons/icons.svg#locationIcon"></use>
+              </svg>
+              <p>Cyprus, Limassol</p>
+            </div>
+            <h1>frontend developer</h1>
+          </div>
+        </div>
         <svg id="svgBackground" class=""></svg>
       </div>
       <div class="my-skills">
@@ -28,6 +67,7 @@
 
     <section id="section1">
       <span class="line"></span>
+
       <div class="about-me">about-me</div>
       <div class="education">education</div>
     </section>
