--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
       <a href="#section2"></a>
       <a href="#section3"></a>
     </nav>
+
+    <!-- 🟢🟢🟢 -->
     <section id="section0">
-      <span class="line"></span>
+      <span class="lineSection"></span>
       <div class="foto">
         <div class="perform">
           <div class="contacts">
@@ -23,6 +25,7 @@
               <svg class="icons">
                 <use xlink:href="./src/icons/icons.svg#telegramIcon"></use>
               </svg>
+
               <p>+ 7 993 923 16 08</p>
             </a>
 
@@ -65,14 +68,94 @@
       </div>
     </section>
 
+    <!-- 🟢🟢🟢 -->
     <section id="section1">
-      <span class="line"></span>
+      <span class="lineSection"></span>
 
-      <div class="about-me">about-me</div>
-      <div class="education">education</div>
+      <div>
+        <div class="title">
+          <h1>about-me</h1>
+          <span class="lineSection"></span>
+        </div>
+
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+          tenetur reiciendis deserunt esse iusto tempora ipsum voluptas libero
+          aliquid, pariatur temporibus laboriosam quas explicabo cupiditate, in
+          amet nam praesentium illum?
+        </p>
+      </div>
+      <div>
+        <div class="title">
+          <h1>education</h1>
+          <span class="lineSection"></span>
+        </div>
+
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Necessitatibus delectus tempore eum nemo temporibus doloremque
+          incidunt exercitationem repudiandae nam, rerum, quae cum sapiente
+          distinctio, minus magni assumenda quas ipsum nisi.
+        </p>
+      </div>
     </section>
-    <section id="section2"><span class="line"></span>2</section>
-    <section id="section3"><span class="line"></span>3</section>
+
+    <!-- 🟢🟢🟢 -->
+    <section id="section2">
+      <span class="lineSection"></span>
+      <div>
+        <div class="title">
+          <h1>work experience</h1>
+          <span class="lineSection"></span>
+        </div>
+
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+          tenetur reiciendis deserunt esse iusto tempora ipsum voluptas libero
+          aliquid, pariatur temporibus laboriosam quas explicabo cupiditate, in
+          amet nam praesentium illum?
+        </p>
+      </div>
+      <div>
+        <div class="title">
+          <h1>skills</h1>
+          <span class="lineSection"></span>
+        </div>
+
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Necessitatibus delectus tempore eum nemo temporibus doloremque
+          incidunt exercitationem repudiandae nam, rerum, quae cum sapiente
+          distinctio, minus magni assumenda quas ipsum nisi.
+        </p>
+      </div>
+    </section>
+
+    <!-- 🟢🟢🟢 -->
+    <section id="section3">
+      <span class="lineSection"></span>
+      <div>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+          tenetur reiciendis deserunt esse iusto tempora ipsum voluptas libero
+          aliquid, pariatur temporibus laboriosam quas explicabo cupiditate, in
+          amet nam praesentium illum?
+        </p>
+      </div>
+      <div>
+        <div class="title">
+          <h1>my projects</h1>
+          <span class="lineSection"></span>
+        </div>
+
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          Necessitatibus delectus tempore eum nemo temporibus doloremque
+          incidunt exercitationem repudiandae nam, rerum, quae cum sapiente
+          distinctio, minus magni assumenda quas ipsum nisi.
+        </p>
+      </div>
+    </section>
 
     <script src="./src/js/svgBackground.js" type="module"></script>
     <script src="./src/js/mySkills.js" type="module"></script>
