--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <!-- 🟢🟢🟢 -->
     <section id="section0">
       <span class="lineSection"></span>
+
       <div class="foto">
+        <svg id="svgBackground" class=""></svg>
+        <img class="foto-face" src="./src/img/photo.png" alt="" />
         <div class="perform">
           <div class="contacts">
             <h1>Kzhemiakin Sergei</h1>
@@ -58,7 +61,6 @@
             <h1>frontend developer</h1>
           </div>
         </div>
-        <svg id="svgBackground" class=""></svg>
       </div>
       <div class="my-skills">
         <div class="my-skills__content">
@@ -134,7 +136,6 @@
     <!-- 🟢🟢🟢 -->
     <section id="section3">
       <span class="lineSection"></span>
-      <div class="threeJs"></div>
       <div>
         <div class="title">
           <h1>my projects</h1>
@@ -148,6 +149,7 @@
           distinctio, minus magni assumenda quas ipsum nisi.
         </p>
       </div>
+      <div class="threeJs"></div>
     </section>
     <script type="importmap">
       {
