--- a/index.html
+++ b/index.html
@@ -136,18 +136,24 @@
     <!-- 🟢🟢🟢 -->
     <section id="section3">
       <span class="lineSection"></span>
-      <div>
+      <div class="my-project">
         <div class="title">
           <h1>my projects</h1>
           <span class="lineSection"></span>
         </div>
 
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Necessitatibus delectus tempore eum nemo temporibus doloremque
-          incidunt exercitationem repudiandae nam, rerum, quae cum sapiente
-          distinctio, minus magni assumenda quas ipsum nisi.
-        </p>
+        <div class="my-project__content">
+          <a href="https://guider.pro/">
+            <div class="my-project__card">
+              <img src="./src/img/guider.jpg" alt="guider/" />
+            </div>
+          </a>
+          <a href="https://github.com/1351618/mini_game_billiards">
+            <div class="my-project__card">
+              <img src="./src/img/billiard.jpg" alt="billiard" />
+            </div>
+          </a>
+        </div>
       </div>
       <div class="threeJs"></div>
     </section>
