--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
       <div class="foto">
         <svg id="svgBackground" class=""></svg>
         <img class="foto-face" src="./src/img/photo.png" alt="" />
-        <div class="perform">
+        <div id="perform" class="perform">
           <div class="contacts">
-            <h1>Kzhemiakin Sergei</h1>
+            <button id="lang-btn">A-あ</button>
+            <h1 id="name"></h1>
             <a href="https://t.me/+79939231608">
               <svg class="icons">
                 <use xlink:href="./src/icons/icons.svg#telegramIcon"></use>
@@ -168,5 +169,6 @@
     <script src="./src/js/svgBackground.js" type="module"></script>
     <script src="./src/js/mySkills.js" type="module"></script>
     <script src="./src/js/nav.js" type="module"></script>
+    <script src="./src/js/language.js" type="module"></script>
   </body>
 </html>
