--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img class="foto-face" src="./src/img/photo.png" alt="" />
         <div id="perform" class="perform">
           <div class="contacts">
-            <button id="lang-btn">A-あ</button>
+            <button id="lang-btn">A&ndash;あ</button>
             <h1 id="name"></h1>
             <a href="https://t.me/+79939231608">
               <svg class="icons">
