--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
               <svg class="icons">
                 <use xlink:href="./src/icons/icons.svg#locationIcon"></use>
               </svg>
-              <p>Cyprus, Limassol</p>
+              <p id="location"></p>
             </div>
-            <h1>frontend developer</h1>
+            <h1 id="jobTitle"></h1>
           </div>
         </div>
       </div>
