--- a/index.html
+++ b/index.html
@@ -77,29 +77,19 @@
 
       <div>
         <div class="title">
-          <h1>about-me</h1>
+          <h1 id="aboutMe"></h1>
           <span class="lineSection"></span>
         </div>
 
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
-          tenetur reiciendis deserunt esse iusto tempora ipsum voluptas libero
-          aliquid, pariatur temporibus laboriosam quas explicabo cupiditate, in
-          amet nam praesentium illum?
-        </p>
+        <p id="aboutMeText"></p>
       </div>
       <div>
         <div class="title">
-          <h1>education</h1>
+          <h1 id="education"></h1>
           <span class="lineSection"></span>
         </div>
 
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit.
-          Necessitatibus delectus tempore eum nemo temporibus doloremque
-          incidunt exercitationem repudiandae nam, rerum, quae cum sapiente
-          distinctio, minus magni assumenda quas ipsum nisi.
-        </p>
+        <p id="educationText"></p>
       </div>
     </section>
 
@@ -108,24 +98,25 @@
       <span class="lineSection"></span>
       <div>
         <div class="title">
-          <h1>work experience</h1>
+          <h1 id="workExperience">work experience</h1>
           <span class="lineSection"></span>
         </div>
 
-        <p>
+        <p id="workExperienceText">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
           tenetur reiciendis deserunt esse iusto tempora ipsum voluptas libero
           aliquid, pariatur temporibus laboriosam quas explicabo cupiditate, in
           amet nam praesentium illum?
         </p>
       </div>
+
       <div>
         <div class="title">
-          <h1>skills</h1>
+          <h1 id="skills">skills</h1>
           <span class="lineSection"></span>
         </div>
 
-        <p>
+        <p id="skillsText">
           Lorem ipsum dolor sit amet consectetur adipisicing elit.
           Necessitatibus delectus tempore eum nemo temporibus doloremque
           incidunt exercitationem repudiandae nam, rerum, quae cum sapiente
