--- a/index.html
+++ b/index.html
@@ -128,6 +128,7 @@
     <!-- 🟢🟢🟢 -->
     <section id="section3">
       <span class="lineSection"></span>
+      <div></div>
       <div class="my-project">
         <div class="title">
           <h1>my projects</h1>
