--- a/index.html
+++ b/index.html
@@ -1,12 +1,249 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
     <link rel="stylesheet" href="./src/css/index.min.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <!-- <base href="https://websim.ai/resume/" /> -->
+    <title>Сергей Кожемяки - Архитектор Цифровых Систем</title>
   </head>
   <body>
+    <div class="cyber-bg"></div>
+    <div class="container">
+      <!-- <header> -->
+      <div class="header-content" id="header-content">
+        <h1 class="name">Сергей Кожемяки</h1>
+        <p class="title">Архитектор Цифровых Систем</p>
+        <p class="intro">
+          Опытный специалист в области разработки высоконагруженных систем и
+          инновационных веб-приложений. Мастер кодирования в цифровом
+          пространстве, создающий архитектуры будущего.
+        </p>
+      </div>
+      <div class="headrProfPhoto" id="headrProfPhoto">
+        <div class="profile-photo">
+          <img
+            alt="KSI photo02.png"
+            src="./src/img/photo02.png"
+            width="200"
+            height="200"
+          />
+        </div>
+      </div>
+      <!-- </header> -->
+      <!-- полоса со скилами -->
+      <section class="skilRunLine">
+        <!-- 123 -->
+        <div class="my-skills__content">
+          <span class="content one"></span>
+          <span class="content two"></span>
+        </div>
+      </section>
+
+      <section id="skills">
+        <h2>Технологический Арсенал</h2>
+        <div class="skills">
+          <span class="skill">Квантовое Программирование</span>
+          <span class="skill">Нейронные Сети</span>
+          <span class="skill">Blockchain</span>
+          <span class="skill">IoT Системы</span>
+          <span class="skill">AR/VR Разработка</span>
+          <span class="skill">Кибербезопасность</span>
+          <span class="skill">AI-Driven Development</span>
+          <span class="skill">Квантовые Базы Данных</span>
+          <span class="skill">Нейроинтерфейсы</span>
+          <span class="skill">Голографические UI</span>
+        </div>
+      </section>
+
+      <section id="experience">
+        <h2>Хроники Цифровой Эволюции</h2>
+        <div class="experience-item">
+          <h3>Главный Архитектор Цифровых Систем</h3>
+          <p class="date">NeoTech Innovations | 2030 - Настоящее время</p>
+          <ul>
+            <li>
+              Разработка квантовых алгоритмов для оптимизации глобальных сетей
+            </li>
+            <li>
+              Внедрение нейроинтерфейсов в корпоративные системы управления
+            </li>
+            <li>Создание AI-driven экосистем для автономных городов</li>
+          </ul>
+        </div>
+        <div class="experience-item">
+          <h3>Ведущий Инженер Кибернетических Систем</h3>
+          <p class="date">Cyber Dynamics Corp | 2025 - 2030</p>
+          <ul>
+            <li>
+              Разработка и внедрение систем виртуальной и дополненной реальности
+            </li>
+            <li>
+              Проектирование защищенных блокчейн-сетей для финансовых институтов
+            </li>
+            <li>Оптимизация IoT-инфраструктуры для умных городов</li>
+          </ul>
+        </div>
+      </section>
+
+      <section id="education">
+        <h2>Квантовые Импринты Знаний</h2>
+        <div class="education-item">
+          <h3>Доктор Квантовой Информатики</h3>
+          <p class="date">Институт Технологической Сингулярности | 2028</p>
+          <p>
+            Диссертация: "Квантовые вычисления в контексте нейросетевых
+            архитектур: новая парадигма обработки данных"
+          </p>
+        </div>
+        <div class="education-item">
+          <h3>Магистр Кибернетических Наук</h3>
+          <p class="date">Московский Институт Киберфизических Систем | 2025</p>
+        </div>
+      </section>
+
+      <section id="projects">
+        <h2>Порталы в Цифровое Будущее</h2>
+        <div class="projects-grid">
+          <div class="project-item">
+            <h3 class="project-title">NeuroLink</h3>
+            <p class="project-description">
+              Разработка системы прямого нейроинтерфейса для управления умным
+              домом и персональными устройствами.
+            </p>
+          </div>
+          <div class="project-item">
+            <h3 class="project-title">QuantumSphere</h3>
+            <p class="project-description">
+              Создание квантовой сети для безопасной передачи данных между
+              планетарными колониями.
+            </p>
+          </div>
+          <div class="project-item">
+            <h3 class="project-title">CyberEco</h3>
+            <p class="project-description">
+              Проектирование и внедрение AI-экосистемы для оптимизации ресурсов
+              и управления климатом мегаполисов.
+            </p>
+          </div>
+        </div>
+      </section>
+
+      <section id="works">
+        <h2>Галерея Цифровых Шедевров</h2>
+        <div class="works-grid">
+          <div class="work-item">
+            <img
+              class="work-image"
+              alt="Голографическое изображение Квантового Компаса с мерцающими звездными картами"
+              src="./src/img/guider.jpg"
+              width="200"
+              height="200"
+            />
+            <div class="work-overlay">
+              <div class="work-text">
+                <h3 class="work-title">Квантовый Компас</h3>
+                <p class="work-description">
+                  Революционное устройство для навигации в многомерном
+                  космическом пространстве.
+                </p>
+                <a href="https://quantum-compass.space" target="_blank"
+                  >Подробнее</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="work-item">
+            <img
+              class="work-image"
+              alt="Голографическое изображение Квантового Компаса с мерцающими звездными картами"
+              src="./src/img/guider.jpg"
+              width="200"
+              height="200"
+            />
+            <div class="work-overlay">
+              <div class="work-text">
+                <h3 class="work-title">Квантовый Компас</h3>
+                <p class="work-description">
+                  Революционное устройство для навигации в многомерном
+                  космическом пространстве.
+                </p>
+                <a href="https://quantum-compass.space" target="_blank"
+                  >Подробнее</a
+                >
+              </div>
+            </div>
+          </div>
+          <div class="work-item">
+            <img
+              class="work-image"
+              alt="Голографическое изображение Квантового Компаса с мерцающими звездными картами"
+              src="./src/img/guider.jpg"
+              width="200"
+              height="200"
+            />
+            <div class="work-overlay">
+              <div class="work-text">
+                <h3 class="work-title">Квантовый Компас</h3>
+                <p class="work-description">
+                  Революционное устройство для навигации в многомерном
+                  космическом пространстве.
+                </p>
+                <a href="https://quantum-compass.space" target="_blank"
+                  >Подробнее</a
+                >
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section id="contact">
+        <h2>Квантовые Каналы Связи</h2>
+        <div class="contact-item">
+          <i class="fas fa-brain"></i>
+          <span>Нейро-ID: #SK-2045-OMEGA</span>
+        </div>
+        <div class="contact-item">
+          <i class="fas fa-envelope"></i>
+          <a href="https://t.me/+79939231608">
+            <svg class="icons">
+              <use xlink:href="./src/icons/icons.svg#telegramIcon"></use>
+            </svg>
+
+            <p>+ 7 993 923 16 08</p>
+          </a>
+        </div>
+        <div class="contact-item">
+          <i class="fab fa-holo-net"></i>
+          <a href="https://api.whatsapp.com/send?phone=79939231608">
+            <svg class="icons">
+              <use xlink:href="./src/icons/icons.svg#whatsappIcon"></use>
+            </svg>
+            <p>+ 7 993 923 16 08</p>
+          </a>
+        </div>
+        <div class="contact-item">
+          <i class="fab fa-quantum-github"></i>
+          <a href="tel:+35795541637">
+            <svg class="icons">
+              <use xlink:href="./src/icons/icons.svg#phoneIcon"></use>
+            </svg>
+            <p>+ 357 95 541 637</p>
+          </a>
+        </div>
+        <div class="contact-item">
+          <i class="fab fa-quantum-github"></i>
+          <a href="mailto:1351618@gmail.com">
+            <svg class="icons">
+              <use xlink:href="./src/icons/icons.svg#emailIcon"></use>
+            </svg>
+            <p>1351618@gmail.com</p>
+          </a>
+        </div>
+      </section>
+    </div>
+
     <nav class="nav">
       <a class="active" href="#section0"></a>
       <a href="#section1"></a>
@@ -15,7 +252,7 @@
     </nav>
 
     <!-- 🟢🟢🟢 -->
-    <section id="section0">
+    <!-- <section id="section0">
       <span class="lineSection"></span>
 
       <div class="foto">
@@ -69,10 +306,10 @@
           <span class="content two"></span>
         </div>
       </div>
-    </section>
+    </section> -->
 
     <!-- 🟢🟢🟢 -->
-    <section id="section1">
+    <!-- <section id="section1">
       <span class="lineSection"></span>
 
       <div>
@@ -91,10 +328,10 @@
 
         <p id="educationText"></p>
       </div>
-    </section>
+    </section> -->
 
     <!-- 🟢🟢🟢 -->
-    <section id="section2">
+    <!-- <section id="section2">
       <span class="lineSection"></span>
       <div>
         <div class="title">
@@ -123,7 +360,7 @@
           distinctio, minus magni assumenda quas ipsum nisi.
         </p>
       </div>
-    </section>
+    </section> -->
 
     <!-- 🟢🟢🟢 -->
     <section id="section3">
@@ -157,10 +394,150 @@
         }
       }
     </script>
-    <script src="./src/js/objThree.js" type="module"></script>
-    <script src="./src/js/svgBackground.js" type="module"></script>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", (event) => {
+        // Эффект появления секций
+        const sections = document.querySelectorAll("section");
+        const observer = new IntersectionObserver(
+          (entries) => {
+            entries.forEach((entry) => {
+              if (entry.isIntersecting) {
+                entry.target.style.opacity = 1;
+                entry.target.style.transform = "translateY(0) scale(1)";
+              }
+            });
+          },
+          { threshold: 0.1 }
+        );
+
+        sections.forEach((section) => {
+          section.style.opacity = 0;
+          section.style.transform = "translateY(20px) scale(0.9)";
+          section.style.transition = "opacity 0.5s ease, transform 0.5s ease";
+          observer.observe(section);
+        });
+
+        // Эффект свечения для навыков
+        const skills = document.querySelectorAll(".skill");
+        skills.forEach((skill) => {
+          skill.addEventListener("mousemove", (e) => {
+            const rect = skill.getBoundingClientRect();
+            const x = e.clientX - rect.left;
+            const y = e.clientY - rect.top;
+            skill.style.background = `radial-gradient(circle at ${x}px ${y}px, rgba(0, 255, 157, 0.3), rgba(0, 255, 157, 0.1) 40%, rgba(0, 255, 157, 0) 60%)`;
+          });
+          skill.addEventListener("mouseleave", () => {
+            skill.style.background = "rgba(0, 255, 157, 0.1)";
+          });
+        });
+
+        // Эффект свечения для проектов и работ
+        const items = document.querySelectorAll(".project-item, .work-item");
+        items.forEach((item) => {
+          item.addEventListener("mousemove", (e) => {
+            const rect = item.getBoundingClientRect();
+            const x = e.clientX - rect.left;
+            const y = e.clientY - rect.top;
+
+            item.style.background = `
+              radial-gradient(
+                circle at ${x}px ${y}px,
+                rgba(0, 255, 157, 0.3) 0%,
+                rgba(0, 255, 157, 0.1) 20%,
+                rgba(0, 255, 157, 0) 50%
+              ),
+              rgba(0, 255, 157, 0.05)
+            `;
+
+            item.style.transform = `
+              perspective(1000px)
+              rotateY(${(x - rect.width / 2) / 10}deg)
+              rotateX(${(y - rect.height / 2) / -10}deg)
+              translateZ(10px)
+            `;
+          });
+
+          item.addEventListener("mouseleave", () => {
+            item.style.background = "rgba(0, 255, 157, 0.05)";
+            item.style.transform = "none";
+          });
+        });
+
+        // Эффект глитча для имени
+        const name = document.querySelector(".name");
+        let glitchInterval;
+
+        name.addEventListener("mouseover", () => {
+          clearInterval(glitchInterval);
+          glitchInterval = setInterval(() => {
+            name.style.textShadow = `
+              ${Math.random() * 10 - 5}px ${
+              Math.random() * 10 - 5
+            }px rgba(0, 255, 157, 0.7),
+              ${Math.random() * 10 - 5}px ${
+              Math.random() * 10 - 5
+            }px rgba(127, 255, 0, 0.7)
+            `;
+          }, 50);
+        });
+
+        name.addEventListener("mouseout", () => {
+          clearInterval(glitchInterval);
+          name.style.textShadow = "0 0 10px rgba(0, 255, 157, 0.7)";
+        });
+      });
+
+      // Добавляем эффект кибер-частиц
+      const particlesContainer = document.createElement("div");
+      particlesContainer.style.position = "fixed";
+      particlesContainer.style.top = "0";
+      particlesContainer.style.left = "0";
+      particlesContainer.style.width = "100%";
+      particlesContainer.style.height = "100%";
+      particlesContainer.style.pointerEvents = "none";
+      particlesContainer.style.zIndex = "-1";
+      document.body.appendChild(particlesContainer);
+
+      function createParticle() {
+        const particle = document.createElement("div");
+        particle.style.position = "absolute";
+        particle.style.width = "2px";
+        particle.style.height = "2px";
+        particle.style.background = `rgba(0, 255, 157, ${
+          Math.random() * 0.5 + 0.5
+        })`;
+        particle.style.borderRadius = "50%";
+        particle.style.top = `${Math.random() * 100}%`;
+        particle.style.left = `${Math.random() * 100}%`;
+        particle.style.animation = `floatParticle ${
+          Math.random() * 5 + 5
+        }s linear infinite`;
+        particlesContainer.appendChild(particle);
+
+        setTimeout(() => {
+          particle.remove();
+        }, 10000);
+      }
+
+      setInterval(createParticle, 200);
+
+      const style = document.createElement("style");
+      style.textContent = `
+        @keyframes floatParticle {
+          0% {
+            transform: translateY(0) translateX(0);
+          }
+          100% {
+            transform: translateY(-100vh) translateX(${
+              Math.random() * 200 - 100
+            }px);
+          }
+        }
+      `;
+      document.head.appendChild(style);
+    </script>
+
     <script src="./src/js/mySkills.js" type="module"></script>
-    <script src="./src/js/nav.js" type="module"></script>
-    <script src="./src/js/language.js" type="module"></script>
   </body>
 </html>
