--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
 
       <section id="contact">
         <h2>Квантовые Каналы Связи</h2>
+        <span class="lineSection"></span>
         <div class="contact-item">
           <i class="fas fa-brain"></i>
           <span>Нейро-ID: #SK-2045-OMEGA</span>
