--- a/index.html
+++ b/index.html
@@ -165,6 +165,26 @@
               </div>
             </div>
           </div>
+
+          <div class="work-item">
+            <img
+              class="work-image"
+              alt="Сайт показывает услуги и проекты компании в сфере бетона и гидроизоляции, с акцентом на опыт и качество"
+              src="./src/img/torkretsovilo.png"
+            />
+            <div class="work-overlay">
+              <div class="work-text">
+                <h3 class="work-title">torkretsovilo.ru</h3>
+                <p class="work-description">
+                  Сайт показывает услуги и проекты компании в сфере бетона и
+                  гидроизоляции, с акцентом на опыт и качество <br />- wordpress
+                </p>
+                <a href="https://torkretsovilo.ru/" target="_blank"
+                  >Посетить сайт</a
+                >
+              </div>
+            </div>
+          </div>
         </div>
       </section>
 
