--- a/index.html
+++ b/index.html
@@ -129,11 +129,7 @@
         <span class="lineSection"></span>
         <div class="works-grid">
           <div class="work-item">
-            <img
-              class="work-image"
-              alt="guider.jpg"
-              src="./src/img/guider.jpg"
-            />
+            <img alt="guider.jpg" src="./src/img/guider.jpg" />
             <div class="work-overlay">
               <div class="work-text">
                 <h3 class="work-title">guider.pro</h3>
@@ -148,7 +144,6 @@
 
           <div class="work-item">
             <img
-              class="work-image"
               alt="Интернет магазин One shot tattoo shop для мастеров татуировки и татуажа"
               src="./src/img/oneshottattoo.shop.png"
             />
@@ -168,7 +163,6 @@
 
           <div class="work-item">
             <img
-              class="work-image"
               alt="Сайт показывает услуги и проекты компании в сфере бетона и гидроизоляции, с акцентом на опыт и качество"
               src="./src/img/torkretsovilo.png"
             />
