--- a/index.html
+++ b/index.html
@@ -52,39 +52,14 @@
       <section id="experience">
         <h2>Развитие и Достижения</h2>
         <span class="lineSection"></span>
-        <div class="experience-item">
-          <h3>Главный Архитектор Цифровых Систем</h3>
-          <p class="date">NeoTech Innovations | 2030 - Настоящее время</p>
-          <ul>
-            <li>
-              Разработка квантовых алгоритмов для оптимизации глобальных сетей
-            </li>
-            <li>
-              Внедрение нейроинтерфейсов в корпоративные системы управления
-            </li>
-            <li>Создание AI-driven экосистем для автономных городов</li>
-          </ul>
-        </div>
-        <div class="experience-item">
-          <h3>Ведущий Инженер Кибернетических Систем</h3>
-          <p class="date">Cyber Dynamics Corp | 2025 - 2030</p>
-          <ul>
-            <li>
-              Разработка и внедрение систем виртуальной и дополненной реальности
-            </li>
-            <li>
-              Проектирование защищенных блокчейн-сетей для финансовых институтов
-            </li>
-            <li>Оптимизация IoT-инфраструктуры для умных городов</li>
-          </ul>
-        </div>
+        <div id="experienceCont"></div>
       </section>
 
       <section id="education">
-        <h2>Квантовые Импринты Знаний</h2>
+        <h2>education</h2>
         <span class="lineSection"></span>
         <div class="education-item">
-          <h3>Доктор Квантовой Информатики</h3>
+          <h3>title. . .</h3>
           <p class="date">Институт Технологической Сингулярности | 2028</p>
           <p>
             Диссертация: "Квантовые вычисления в контексте нейросетевых
@@ -98,31 +73,9 @@
       </section>
 
       <section id="projects">
-        <h2>Порталы в Цифровое Будущее</h2>
+        <h2>title . . .</h2>
         <span class="lineSection"></span>
-        <div class="projects-grid">
-          <div class="project-item">
-            <h3 class="project-title">NeuroLink</h3>
-            <p class="project-description">
-              Разработка системы прямого нейроинтерфейса для управления умным
-              домом и персональными устройствами.
-            </p>
-          </div>
-          <div class="project-item">
-            <h3 class="project-title">QuantumSphere</h3>
-            <p class="project-description">
-              Создание квантовой сети для безопасной передачи данных между
-              планетарными колониями.
-            </p>
-          </div>
-          <div class="project-item">
-            <h3 class="project-title">CyberEco</h3>
-            <p class="project-description">
-              Проектирование и внедрение AI-экосистемы для оптимизации ресурсов
-              и управления климатом мегаполисов.
-            </p>
-          </div>
-        </div>
+        <div class="projects-grid" id="projects-grid"></div>
       </section>
 
       <section id="works">
@@ -184,7 +137,7 @@
       </section>
 
       <section id="contact">
-        <h2>Квантовые Каналы Связи</h2>
+        <h2></h2>
         <span class="lineSection"></span>
         <div class="contact-item">
           <i class="fas fa-brain"></i>
