--- a/index.html
+++ b/index.html
@@ -58,17 +58,21 @@
       <section id="education">
         <h2>education</h2>
         <span class="lineSection"></span>
-        <div class="education-item">
-          <h3>title. . .</h3>
-          <p class="date">Институт Технологической Сингулярности | 2028</p>
-          <p>
-            Диссертация: "Квантовые вычисления в контексте нейросетевых
-            архитектур: новая парадигма обработки данных"
-          </p>
-        </div>
-        <div class="education-item">
-          <h3>Магистр Кибернетических Наук</h3>
-          <p class="date">Московский Институт Киберфизических Систем | 2025</p>
+        <div class="education-items" id="education-items">
+          <!-- <div class="education-item">
+            <h3>title. . .</h3>
+            <p class="date">Институт Технологической Сингулярности | 2028</p>
+            <p>
+              Диссертация: "Квантовые вычисления в контексте нейросетевых
+              архитектур: новая парадигма обработки данных"
+            </p>
+          </div>
+          <div class="education-item">
+            <h3>Магистр Кибернетических Наук</h3>
+            <p class="date">
+              Московский Институт Киберфизических Систем | 2025
+            </p>
+          </div> -->
         </div>
       </section>
 
@@ -81,6 +85,12 @@
       <section id="works">
         <h2></h2>
         <span class="lineSection"></span>
+        <!-- сделать вкладки для разделов -->
+        <!-- <div>
+          <button id="site">сайты</button>
+          <button id="layout">верстка</button>
+          <button id="animation">анимация</button>
+        </div> -->
         <div class="works-grid">
           <div class="work-item">
             <img alt="guider.jpg" src="./src/img/guider.jpg" />
@@ -133,7 +143,69 @@
               </div>
             </div>
           </div>
+
+          <div class="work-item">
+            <img
+              alt="Сайт Сервис для анализа и прогнозирования спортивных событий с
+              использованием статистики."
+              src="./src/img/sport-calc.jpg"
+            />
+            <div class="work-overlay">
+              <div class="work-text">
+                <h3 class="work-title">sport-calc.com</h3>
+                <p class="work-description">
+                  Сервис для анализа и прогнозирования спортивных событий с
+                  использованием статистики.
+                  <br />- wordpress
+                </p>
+                <a href="https://sport-calc.com/" target="_blank"
+                  >Посетить сайт</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="work-item">
+            <img
+              alt="сайт Магазин замков и дверной фурнитуры"
+              src="./src/img/moskva-zamki.jpg"
+            />
+            <div class="work-overlay">
+              <div class="work-text">
+                <h3 class="work-title">moskva-zamki.ru</h3>
+                <p class="work-description">
+                  Магазин замков и дверной фурнитуры.
+                  <br />- HTML, CSS, JS, jQuery, Bootstrap.
+                </p>
+                <a href="https://moskva-zamki.ru/" target="_blank"
+                  >Посетить сайт</a
+                >
+              </div>
+            </div>
+          </div>
+
+          <div class="work-item">
+            <img
+              alt="сайт Магазин замков и дверной фурнитуры"
+              src="./src/img/vekus.jpg"
+            />
+            <div class="work-overlay">
+              <div class="work-text">
+                <h3 class="work-title">vekus.ru</h3>
+                <p class="work-description">
+                  Сайт предлагает услуги по ремонту оборудования и консультации
+                  по технологиям для бизнеса.
+                  <br />- 1C-Битрикс.
+                </p>
+                <a href="https://www.vekus.ru/" target="_blank"
+                  >Посетить сайт</a
+                >
+              </div>
+            </div>
+          </div>
         </div>
+        <div></div>
+        <div></div>
       </section>
 
       <section id="contact">
