--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
           <button id="layout">верстка</button>
           <button id="animation">анимация</button>
         </div> -->
-        <div class="works-grid">
+        <div class="works-grid" id="works-grid">
           <div class="work-item">
             <img alt="guider.jpg" src="./src/img/guider.jpg" />
             <div class="work-overlay">
@@ -200,6 +200,24 @@
                 <a href="https://www.vekus.ru/" target="_blank"
                   >Посетить сайт</a
                 >
+              </div>
+            </div>
+          </div>
+
+          <div class="work-item">
+            <img
+              alt="сайт Магазин замков и дверной фурнитуры"
+              src="./src/img/aq_ru.jpg"
+            />
+            <div class="work-overlay">
+              <div class="work-text">
+                <h3 class="work-title">aq.ru</h3>
+                <p class="work-description">
+                  "Аквариус" производит компьютеры, электронику и ИТ-решения для
+                  бизнеса и госструктур.
+                  <br />- Nuxt.js, Node.js.
+                </p>
+                <a href="https://www.aq.ru/" target="_blank">Посетить сайт</a>
               </div>
             </div>
           </div>
